--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "rewrites": [
     {
       "source": "/",
-      "destination": "/core/login.html"
+      "destination": "/presentation.html"
     },
     {
       "source": "/login",
